5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1888_3139.log
== TEST (2019-07-09 16:53:34) 
-- CODE:
from numpy import*

a = array(eval(float('digite: ')))

m =((v[0]**1/3)+(v[1]**1/3)+(v[2]**1/3)+(v[n-1]**1/3)/n)**3

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:53:53) 
-- CODE:
from numpy import*

a =int(float('digite: ')))

m =((v[0]**1/3)+(v[1]**1/3)+(v[2]**1/3)+(v[n-1]**1/3)/n)**3

print(m)
-- ERROR:
File "XXXX", line 3
    a =int(float('digite: ')))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:53:58) 
-- CODE:
from numpy import*

a =int(float('digite: '))

m =((v[0]**1/3)+(v[1]**1/3)+(v[2]**1/3)+(v[n-1]**1/3)/n)**3

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
